parser/example/good/github/raw.githubusercontent.com/bbockelm/hcc-config/6f4c5d1544d990a61f8aab3b503e9a3e3f9ae663/modules/nfs/manifests/init.pp
#
# Class: nfs
#
# include nfs::server for fileservers
#

class nfs {

	package { "nfs-utils": ensure => present, }

}
