parser/example/error/github/raw.githubusercontent.com/puppetmodules/puppet-module-git/b99f2258021a00fa01adb47d6fc1d4b0ae241321/manifests/client.pp
# Class: git
#
# This class installs git client
#
# Sample Usage:
#  include git::client
#

class git::client {
  case $operatingsystem {
    centos, redhat, debian, ubuntu: { $package_name = 'git' }
    default: { $package_name = 'git-core' }
  }

  package { $package_name:
    ensure => installed,
  }
}

  }
}
